--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/switchView.css">
     <!-- endbuild -->
   </head>
   <body ng-app="switchviewApp">
@@ -76,6 +77,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/switch.js"></script>
         <script src="scripts/directives/switchview.js"></script>
+        <script src="scripts/services/portsview.js"></script>
         <!-- endbuild -->
 </body>
 </html>
